--- a/public/index.css
+++ b/public/index.css
@@ -3,11 +3,64 @@ body {
 }
 
 #navbar {
-    background-color: black;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: none;
     color: white;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     flex-grow: 1;
     max-height: 10%;
     min-height: 40px;
-}
+    position: sticky;
+    position: -webkit-sticky;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 9999;
+    background-color: rgb(44, 44, 44);
+  }
+  #navbarButtons button {
+    margin-left: 0px;
+    padding: 1rem;
+    color: rgb(181, 179, 179);
+    background-color: rgb(44, 44, 44);
+    border: none;
+    text-transform: uppercase;
+    height: 80px;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+  #navbarButtons button:hover {
+    color: aqua;
+    background-color: rgb(35, 35, 35);
+    border-bottom: 2px solid aqua;
+  }
+  #navbarButtons button:active {
+    color: rgb(181, 179, 179);
+    background-color: rgb(44, 44, 44);
+  }
+  .loader {
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid rgb(44, 44, 44);
+    border-right: 6px solid aqua;
+    border-left: 6px solid aqua;
+    border-bottom: 6px solid rgb(44, 44, 44);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
