--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,14 @@
+/* color scheme
+yellow- #FFD116
+BLUE- #073B4C
+DARK GREY- #3A3A3A
+LIGHT GREY- #727272
+LIGHT BLUE- #118AB2 */
+
+* {
+    font-family: "Poppins", sans-serif;
+   
+  }
 body {
     margin: 0;
 }
@@ -34,9 +45,9 @@ body {
     transition: 0.5s;
   }
   #navbarButtons button:hover {
-    color: aqua;
+    color: #118AB2;
     background-color: rgb(35, 35, 35);
-    border-bottom: 2px solid aqua;
+    border-bottom: 2px solid #118AB2;
   }
   #navbarButtons button:active {
     color: rgb(181, 179, 179);
@@ -45,8 +56,8 @@ body {
   .loader {
     border: 6px solid #f3f3f3;
     border-top: 6px solid rgb(44, 44, 44);
-    border-right: 6px solid aqua;
-    border-left: 6px solid aqua;
+    border-right: 6px solid #FFD116;
+    border-left: 6px solid #FFD116;
     border-bottom: 6px solid rgb(44, 44, 44);
     border-radius: 50%;
     width: 40px;
