--- a/public/index.css
+++ b/public/index.css
@@ -35,27 +35,31 @@ body {
   background-color: rgb(44, 44, 44);
 }
 
-#navbarButtons button {
+.navBarBtns button {
   margin-left: 0px;
   padding: 1rem;
   color: rgb(181, 179, 179);
   background-color: rgb(44, 44, 44);
   border: none;
   text-transform: uppercase;
-  height: 80px;
+  height: 40px;
   cursor: pointer;
   transition: 0.5s;
 }
 
-#navbarButtons button:hover {
-  color: #118AB2;
-  background-color: rgb(35, 35, 35);
-  border-bottom: 2px solid #118AB2;
+.navBarBtns button:hover {
+  color: #FFD116;
+  background-color: rgb(44, 44, 44);
+  border-bottom: 2px solid #FFD116;
 }
 
-#navbarButtons button:active {
+.navBarBtns button:active {
   color: rgb(181, 179, 179);
   background-color: rgb(44, 44, 44);
+}
+.logoDash{
+    height: 60px;
+    padding: 5px;
 }
 
 .search {
@@ -75,13 +79,37 @@ body {
 
 .categories {
   display: flex;
-  justify-content: space-between;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  justify-content: center;
+  
   margin: auto;
   background-color: #3A3A3A;
   color: white;
 }
+.categories button {
+    margin-left: 0px;
+    flex-grow: 1;
+    padding: 1rem;
+    color: rgb(181, 179, 179);
+    background-color: #3A3A3A;
+    border: none;
+    text-transform: uppercase;
+    height: 80px;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+  
+  .categories button:hover {
+    color: #FFD116;
+    background-color: rgb(44, 44, 44);
+    border-bottom: 2px solid #FFD116;
+    border-top: 2px solid #FFD116;
+    font-weight: bold;
+  }
+  
+  .categories button:active {
+    color: rgb(181, 179, 179);
+    background-color: #3A3A3A;
+  }
 
 
 
