--- a/public/index.css
+++ b/public/index.css
@@ -56,9 +56,10 @@ body {
   color: rgb(181, 179, 179);
   background-color: rgb(44, 44, 44);
 }
-.logoDash{
-    height: 60px;
-    padding: 5px;
+
+.logoDash {
+  height: 60px;
+  padding: 5px;
 }
 
 .search {
@@ -89,35 +90,55 @@ body {
   background-color: #3A3A3A;
   color: white;
 }
+
 .categories button {
-    margin-left: 0px;
-    flex-grow: 1;
-    padding: 1rem;
-    color: rgb(181, 179, 179);
-    background-color: #3A3A3A;
-    border: none;
-    text-transform: uppercase;
-    height: 80px;
-    cursor: pointer;
-    transition: 0.5s;
-  }
-  
-  .categories button:hover {
-    color: #FFD116;
-    background-color: rgb(44, 44, 44);
-    border-bottom: 2px solid #FFD116;
-    border-top: 2px solid #FFD116;
-    font-weight: bold;
-  }
-  
-  .categories button:active {
-    color: rgb(181, 179, 179);
-    background-color: #3A3A3A;
-  }
-  .product-card{
-    border: 1px solid rgb(0, 0, 0);
-    
-  }
+  margin-left: 0px;
+  flex-grow: 1;
+  padding: 1rem;
+  color: rgb(181, 179, 179);
+  background-color: #3A3A3A;
+  border: none;
+  text-transform: uppercase;
+  height: 80px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.categories button:hover {
+  color: #FFD116;
+  background-color: rgb(44, 44, 44);
+  border-bottom: 2px solid #FFD116;
+  border-top: 2px solid #FFD116;
+  font-weight: bold;
+}
+
+.categories button:active {
+  color: rgb(181, 179, 179);
+  background-color: #3A3A3A;
+}
+
+.product-card {
+  border: 1px solid rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding: 5px;
+  margin: 5px;
+  height: 400px;
+  width: 300px;
+}
+
+.product-card h2 {
+  background: #FFD116;
+  text-align: center;
+}
+
+
+.allProducts {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
 
 
