--- a/public/index.css
+++ b/public/index.css
@@ -12,6 +12,7 @@ LIGHT BLUE- #118AB2 */
 
 body {
   margin: 0;
+  background-color: #d4d4d4;
 }
 
 #navbar {
@@ -95,7 +96,7 @@ body {
   margin-left: 0px;
   flex-grow: 1;
   padding: 1rem;
-  color: rgb(181, 179, 179);
+  color: rgb(255, 255, 255);
   background-color: #3A3A3A;
   border: none;
   text-transform: uppercase;
@@ -118,12 +119,14 @@ body {
 }
 
 .product-card {
-  border: 1px solid rgb(0, 0, 0);
+    background-color: white;
+  box-shadow: 0px 0px 10px rgb(41, 41, 41);
+  border-radius: 2px;
   display: flex;
   flex-direction: column;
   align-items: left;
   padding: 5px;
-  margin: 5px;
+  margin: px;
   height: 400px;
   width: 300px;
 }
@@ -132,6 +135,12 @@ body {
   background: #FFD116;
   text-align: center;
 }
+.product-card:hover {
+    background-color: #727272;
+    border-bottom: 2px solid #FFD116;
+    border-top: 2px solid #FFD116;
+    transition: 0.5s;
+  }
 
 
 .allProducts {
