--- a/public/index.css
+++ b/public/index.css
@@ -141,7 +141,22 @@ body {
     border-top: 2px solid #FFD116;
     transition: 0.5s;
   }
-
+  .product-card-individual {
+  background-color: white;
+  box-shadow: 0px 0px 10px rgb(41, 41, 41);
+  border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding: 0px;
+  margin: 5px;
+  height: 700px;
+  width: 1000px;
+}
+.addToCartBtn{
+    width: 150px;
+    height: 50px;
+}
 
 .allProducts {
   display: flex;
