--- a/public/index.css
+++ b/public/index.css
@@ -15,6 +15,23 @@ body {
   background-color: #d4d4d4;
 }
 
+.addToCartBtn {
+  width: 150px;
+  height: 30px;
+  background-color: #FFD116;
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0px 0px 5px rgb(41, 41, 41);
+}
+
+.addToCartBtn:hover {
+  background-color: #e0b713;
+}
+
+.addToCartBtn:active {
+  background-color: #FFD116;
+}
+
 #navbar {
   padding-left: 10px;
   padding-right: 10px;
@@ -119,7 +136,7 @@ body {
 }
 
 .product-card {
-    background-color: white;
+  background-color: white;
   box-shadow: 0px 0px 10px rgb(41, 41, 41);
   border-radius: 2px;
   display: flex;
@@ -135,27 +152,35 @@ body {
   background: #FFD116;
   text-align: center;
 }
+
 .product-card:hover {
-    background-color: #727272;
-    border-bottom: 2px solid #FFD116;
-    border-top: 2px solid #FFD116;
-    transition: 0.5s;
-  }
-  .product-card-individual {
+  background-color: #727272;
+  border-bottom: 2px solid #FFD116;
+  border-top: 2px solid #FFD116;
+  transition: 0.5s;
+}
+
+.product-card-individual {
   background-color: white;
   box-shadow: 0px 0px 10px rgb(41, 41, 41);
   border-radius: 2px;
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
+  justify-content: center;
   padding: 0px;
   margin: 5px;
-  height: 700px;
-  width: 1000px;
+  height: 300px;
+  flex: 1;
+  margin: 30px 60px;
+  border-radius: 10px;
+  padding-bottom: 1rem;
+
 }
-.addToCartBtn{
-    width: 150px;
-    height: 50px;
+
+.addToCartBtn {
+  width: 150px;
+  height: 50px;
 }
 
 .allProducts {
@@ -199,7 +224,7 @@ body {
   background-color: #9a9a9a;
   border: 1px solid rgb(0, 0, 0);
   padding-left: 2%;
-  display:flex;
+  display: flex;
   justify-content: space-around;
 }
 
@@ -219,15 +244,18 @@ body {
 .cart-quantity {
   font-weight: 600;
 }
+
 .cart_img {
   max-height: 150px;
-  max-width:150px;
+  max-width: 150px;
   margin: 10px;
 }
-.product_buttons{
-  display:flex;
+
+.product_buttons {
+  display: flex;
   flex-direction: column;
 }
-.product_text{
+
+.product_text {
   width: 150px;
 }
