--- a/public/index.css
+++ b/public/index.css
@@ -227,7 +227,15 @@ body {
 .product_buttons{
   display:flex;
   flex-direction: column;
+  justify-content: space-around;
 }
 .product_text{
   width: 150px;
+}
+
+.submitButton {
+  background-color: #FFD116;
+  font-weight: 600;
+  border-radius: 2px;
+  text-transform: uppercase;
 }
