--- a/public/index.css
+++ b/public/index.css
@@ -17,169 +17,178 @@ body {
 
 
 #navbar {
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: none;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-grow: 1;
-    max-height: 10%;
-    min-height: 40px;
-    position: sticky;
-    position: -webkit-sticky;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    z-index: 9999;
-    background-color: rgb(44, 44, 44);
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: none;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
+  max-height: 10%;
+  min-height: 40px;
+  position: sticky;
+  position: -webkit-sticky;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 9999;
+  background-color: rgb(44, 44, 44);
 }
 
 .linksBtn button {
-    margin-left: 0px;
-    color: rgb(181, 179, 179);
-    background-color: rgb(44, 44, 44);
-    border: none;
-    text-transform: uppercase;
-    height: 40px;
-    cursor: pointer;
-    transition: 0.5s;
+  margin-left: 0px;
+  color: rgb(181, 179, 179);
+  background-color: rgb(44, 44, 44);
+  border: none;
+  text-transform: uppercase;
+  height: 40px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.linksBtn:first-of-type {
+  padding-right: 20px;
 }
 
 .linksBtn button:hover {
-    color: #FFD116;
-    background-color: rgb(44, 44, 44);
-    border-bottom: 2px solid #FFD116;
+  color: #FFD116;
+  background-color: rgb(44, 44, 44);
+  border-bottom: 2px solid #FFD116;
 }
 
 .linksBtn button:active {
-    color: rgb(181, 179, 179);
-    background-color: rgb(44, 44, 44);
+  color: rgb(181, 179, 179);
+  background-color: rgb(44, 44, 44);
 }
 
 .logoDash {
-    height: 60px;
-    padding: 5px;
+  height: 60px;
+  padding: 5px;
 }
 
 .search {
-    width: 600px;
+  width: 600px;
 }
 
 .links {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
 }
 
 .links li {
-    padding-left: 1rem;
-    font-size: larger;
+  padding-left: 1rem;
+  font-size: larger;
 }
 
 .categories {
-    display: flex;
-    justify-content: center;
-    position: sticky;
-    position: -webkit-sticky;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    z-index: 9998;
-    margin: auto;
-    background-color: #3A3A3A;
-    color: white;
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  position: -webkit-sticky;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 9998;
+  margin: auto;
+  background-color: #3A3A3A;
+  color: white;
 }
 
 .categories button {
-    margin-left: 0px;
-    flex-grow: 1;
-    padding: 1rem;
-    color: rgb(255, 255, 255);
-    background-color: #3A3A3A;
-    border: none;
-    text-transform: uppercase;
-    height: 80px;
-    cursor: pointer;
-    transition: 0.5s;
+  margin-left: 0px;
+  flex-grow: 1;
+  padding: 1rem;
+  color: rgb(255, 255, 255);
+  background-color: #3A3A3A;
+  border: none;
+  text-transform: uppercase;
+  height: 80px;
+  cursor: pointer;
+  transition: 0.5s;
 }
 
 .categories button:hover {
-    color: #FFD116;
-    background-color: rgb(44, 44, 44);
-    border-bottom: 2px solid #FFD116;
-    border-top: 2px solid #FFD116;
-    font-weight: bold;
+  color: #FFD116;
+  background-color: rgb(44, 44, 44);
+  border-bottom: 2px solid #FFD116;
+  border-top: 2px solid #FFD116;
+  font-weight: bold;
 }
 
 .categories button:active {
-    color: rgb(181, 179, 179);
-    background-color: #3A3A3A;
+  color: rgb(181, 179, 179);
+  background-color: #3A3A3A;
 }
 
 .product-card {
-    background-color: white;
-    box-shadow: 0px 0px 10px rgb(41, 41, 41);
-    border-radius: 2px;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    padding: 5px;
-    margin: px;
-    height: 400px;
-    width: 300px;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgb(41, 41, 41);
+  border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding: 5px;
+  margin: px;
+  height: 400px;
+  width: 300px;
 }
 
 .product-card h2 {
-    background: #FFD116;
-    text-align: center;
+  background: #FFD116;
+  text-align: center;
 }
 
 .product-card:hover {
-    background-color: #727272;
-    border-bottom: 2px solid #FFD116;
-    border-top: 2px solid #FFD116;
-    transition: 0.5s;
+  background-color: #727272;
+  border-bottom: 2px solid #FFD116;
+  border-top: 2px solid #FFD116;
+  transition: 0.5s;
 }
 
 .product-card-individual {
-    background-color: white;
-    box-shadow: 0px 0px 10px rgb(41, 41, 41);
-    border-radius: 2px;
-    display: flex;
-    padding-top: 3rem;
-    justify-content: center;
-    margin: 5px;
-    height: 700px;
-    width: 1000px;
-    flex: 1;
-    margin: 30px 60px;
-    border-radius: 10px;
-    
-    
+  background-color: white;
+  box-shadow: 0px 0px 10px rgb(41, 41, 41);
+  border-radius: 2px;
+  display: flex;
+  padding-top: 3rem;
+  justify-content: center;
+  margin: 5px;
+  height: 700px;
+  width: 1000px;
+  flex: 1;
+  margin: 30px 60px;
+  border-radius: 10px;
+
+
 }
-.individual_item_img{
-    height: 400px;
-    margin-left: 0px;
+
+.individual_item_img {
+  height: 400px;
+  margin-left: 0px;
 }
-.singleItemText{
-    display: flex;
-    flex-direction: column;
-    padding-left: 1rem;
-    border-radius: 5px;
-    border: 1px solid rgb(219, 219, 219);
+
+.singleItemText {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1rem;
+  border-radius: 5px;
+  border: 1px solid rgb(219, 219, 219);
 }
-.right-side-individual-product{
-    display: flex;
-    flex-direction: column;
+
+.right-side-individual-product {
+  display: flex;
+  flex-direction: column;
 }
-.quantity-input{
-    width: 50px;
-    margin-left: 8rem;
-    margin-bottom: 1rem;
+
+.quantity-input {
+  width: 50px;
+  margin-left: 8rem;
+  margin-bottom: 1rem;
 }
+
 .addToCartBtn {
   width: 150px;
   height: 30px;
@@ -274,7 +283,8 @@ body {
 .product_text {
   width: 150px;
 }
-.pageCount{
-  display:flex;
+
+.pageCount {
+  display: flex;
   flex-direction: column;
 }
