--- a/public/index.css
+++ b/public/index.css
@@ -405,6 +405,11 @@ div.pageNum>* {
   justify-content: center;
   margin-top: 2rem;
 }
+.registerPageBox{
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
 .loginPage {
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgb(21, 21, 21);
@@ -416,6 +421,23 @@ div.pageNum>* {
   cursor: pointer;
   padding: 3rem;
 }
+.registerPage{
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgb(21, 21, 21);
+  background-color: #073B4C;
+  color: white;
+  width: 30%;
+  margin-bottom: 20px;
+  text-align: center;
+  cursor: pointer;
+  padding: 3rem;
+}
+.rowWrapper{
+display: flex;
+flex-direction: row;
+justify-content: center;
+}
+
 .submitButton {
   background-color: #073B4C;
   color: rgb(181, 179, 179);
