--- a/public/index.css
+++ b/public/index.css
@@ -182,6 +182,21 @@ body {
   text-decoration: none;
   
 }
+.deleteBtn{
+  position: relative;
+  left: 250px;
+  bottom: 60px;
+  background: #FFD116;
+  border: none;
+  border-radius: 5px;
+}
+.deleteBtn:hover{ 
+  background: #073B4C;
+  color: #FFD116;
+}
+.deleteBtn:active{ 
+  box-shadow: 0px 0px 5px #073B4C;
+}
 
 .product-card:hover {
   background-color: #8e8d8d;
