--- a/public/index.css
+++ b/public/index.css
@@ -197,6 +197,21 @@ body {
 .deleteBtn:active{ 
   box-shadow: 0px 0px 5px #073B4C;
 }
+.editBtn{
+  position: relative;
+  left: 150px;
+  bottom: 60px;
+  background: #FFD116;
+  border: none;
+  border-radius: 5px;
+}
+.editBtn:hover{ 
+  background: #073B4C;
+  color: #FFD116;
+}
+.editBtn:active{ 
+  box-shadow: 0px 0px 5px #073B4C;
+}
 
 .product-card:hover {
   background-color: #8e8d8d;
@@ -213,13 +228,11 @@ body {
   padding-top: 3rem;
   justify-content: center;
   margin: 5px;
+  margin-top: 200px;
   height: 700px;
   width: 1000px;
   flex: 1;
-  margin: 30px 60px;
   border-radius: 10px;
-
-
 }
 
 .pageCount {
