FINISHED-again git commit -m FINISHED

--- a/public/index.css
+++ b/public/index.css
@@ -634,5 +634,9 @@ justify-content: center;
 .allProductsUser{
   display: flex;
   flex-wrap: wrap;
-
+}
+.message{
+  color: red;
+  z-index: 9999;
+  background-color: #09485d;
 }
